# Caso-03-IA_GENERATIVA

./: .gitignore  README.md  pyproject.toml
data/chroma_db/2f61e391-cf47-406a-b483-3a48d63f28b9/: index_metadata.pickle
data/csv/csv/: finales_champions.csv
data/csv/txt/: finales.txt
db_champions/6b69c02b-a32e-4a17-9b6c-93cba21d7662/: index_metadata.pickle
db_champions/9cca332c-4da0-4f94-b162-ffa3c2c7ec92/: index_metadata.pickle
envIA/: pyvenv.cfg
envIA/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
notebooks/: analisis_csvs.ipynb  model.ipynb  scrap.ipynb
