[project]
name = "champions-rag"
version = "0.1.0"
description = "Sistema RAG que analiza la historia y estadísticas de la Champions League."
authors = [
    {name = "José Antonio"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "langchain-core (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
